--- a/project-1/index.html
+++ b/project-1/index.html
@@ -8,7 +8,7 @@
   <body>
     <div>
       <h1>Hacksol</h1>
-      <nav class="topbar-navigation"
+      <nav class="topbar-navigation">
         <div>
           <a href="./index.html" title="Home">HOME</a>
           <div class="topnav-right">
@@ -19,6 +19,7 @@
       </nav>
     </div>
     <h2><marquee> Try Hack Me </h2></marquee>
+    <!--
     <div class="container">
       <a href="./pentesting.html">
         <div class="exercise">CC: Pen Testing</div>
@@ -32,7 +33,93 @@
         <div class="exercise">RP: Nmap</div>
         <img src="./Images/thm_nmap.png" alt="RP: Nmap" width="150px" height="150px" class="exercise">
       </a>
+    --> 
     </div>
+    <fieldset>
+      <legend>Wave 1</legend>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <a href="./pentesting.html">          
+          <h3>CC: Pentesting</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./tmux.html">   
+          <h3>RP: Tmux</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="nmap.html">   
+          <h3>RP: Nmap</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./learn_linux.html">   
+          <h3>Learn Linux</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./find_command.html">   
+          <h3>The Find Command</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./vim.html">   
+          <h3>Toolbox: Vim</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./blue.html">   
+          <h3>Blue</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./web_scanning.html">   
+          <h3>RP: Web Scanning</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./dvwa.html">   
+          <h3>DVWA</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <a href="./plethora.html">   
+          <h3>Plethora</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    </fieldset>
 <!--
 <form>
   <fieldset>
